--- a/app/theme/app_theme.json
+++ b/app/theme/app_theme.json
@@ -15,10 +15,10 @@
   "CTkButton": {
     "corner_radius": 6,
     "border_width": 0,
-    "fg_color": ["#7CBD1E", "#7CBD1E"],
-    "hover_color": ["#629618", "#629618"],
+    "fg_color": ["#537D5D", "#537D5D"],
+    "hover_color": ["#73946B", "#73946B"],
     "border_color": ["#3E454A", "#949A9F"],
-    "text_color": ["#DCE4EE", "#DCE4EE"],
+    "text_color": ["#FFE8CD", "#FFE8CD"],
     "text_color_disabled": ["gray74", "gray60"]
   },
   "CTkLabel": {
@@ -29,7 +29,7 @@
   "CTkEntry": {
     "corner_radius": 6,
     "border_width": 2,
-    "fg_color": ["#F9F9FA", "#343638"],
+    "fg_color": ["#F9F9FA ", "#343638"],
     "border_color": ["#979DA2", "#565B5E"],
     "text_color": ["gray14", "gray84"],
     "placeholder_text_color": ["gray52", "gray62"]
@@ -37,11 +37,11 @@
   "CTkCheckBox": {
     "corner_radius": 6,
     "border_width": 3,
-    "fg_color": ["#7CBD1E", "#7CBD1E"],
+    "fg_color": ["#537D5D", "#537D5D"],
     "border_color": ["#3E454A", "#949A9F"],
-    "hover_color": ["#629618", "#629618"],
+    "hover_color": ["#73946B", "#73946B"],
     "checkmark_color": ["#DCE4EE", "gray90"],
-    "text_color": ["gray14", "gray84"],
+    "text_color": ["#FFE8CD", "#FFE8CD"],
     "text_color_disabled": ["gray60", "gray45"]
   },
   "CTkSwitch": {
